--- a/index.html
+++ b/index.html
@@ -27,45 +27,27 @@
     </section>
 
     <!-- Menu Section -->
-    <section class="menu" id="menu">
-        <h2>Our Menu</h2>
-        <div class="menu-items">
-            <div class="item">
-                <h3>Pizza</h3>
-                <p>Cheesy and delicious</p>
-            </div>
-            <div class="item">
-                <h3>Burger</h3>
-                <p>Juicy and tasty</p>
-            </div>
-            <div class="item">
-                <h3>Pasta</h3>
-                <p>Italian classic</p>
-            </div>
+   <!-- Menu Section -->
+<section class="menu" id="menu">
+    <h2>Our Menu</h2>
+
+    <div class="menu-items">
+        <div class="item">
+            <img src="https://images.unsplash.com/photo-1601924582975-7aa07f5b8f28" alt="Pizza">
+            <h3>Pizza</h3>
+            <p>Cheesy, oven-baked pizza with fresh toppings.</p>
         </div>
-    </section>
 
-    <!-- About Section -->
-    <section class="about" id="about">
-        <h2>About Us</h2>
-        <p>
-            TastyBite Restaurant offers freshly prepared meals made with quality ingredients.
-            Our mission is to serve delicious food with excellent service in a warm environment.
-        </p>
-    </section>
+        <div class="item">
+            <img src="https://images.unsplash.com/photo-1550547660-d9450f859349" alt="Burger">
+            <h3>Burger</h3>
+            <p>Juicy grilled burger with crispy fries.</p>
+        </div>
 
-    <!-- Contact Section -->
-    <section class="contact" id="contact">
-        <h2>Contact Us</h2>
-        <p>Email: contact@tastybite.com</p>
-        <p>Phone: +91 98765 43210</p>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2026 TastyBite Restaurant. All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+        <div class="item">
+            <img src="https://images.unsplash.com/photo-1525755662778-989d0524087e" alt="Pasta">
+            <h3>Pasta</h3>
+            <p>Classic Italian pasta with rich sauces.</p>
+        </div>
+    </div>
+</section>
