--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     <div class="menu-items">
         <div class="item">
-         <img src="https://images.unsplash.com/photo-1548365328-8b849e6c7c9a" alt="Pizza">
+        <img src="pizza.jpg" alt="Pizza">
+
 
             <h3>Pizza</h3>
             <p>Cheesy, oven-baked pizza with fresh toppings.</p>
@@ -52,5 +53,6 @@
         </div>
     </div>
 </section>
+
 
 
